--- a/stylecntct.css
+++ b/stylecntct.css
@@ -27,4 +27,11 @@ h2 {
 a {
     color: white;
     font-family: monospace;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin:0;
+    padding: 0;
+    font-family: 'Agency FB';
+    font-size: 31px;
 }
