--- a/styleaboutme.css
+++ b/styleaboutme.css
@@ -1,6 +1,6 @@
 body {
     display: flex;
-    background-image: linear-gradient(to top right,gray,black);
+    background-image: url('bg1042.jpg');
 
 
 }
@@ -19,7 +19,7 @@ h1 {
 
 a {
     color:white;
-    font-family:'Agency FB';
+    font-family:monospace;
     font-size: 24px;
 
 
@@ -33,7 +33,7 @@ height: 75%;
 
 div {
     color: black;
-    background-color: black;
+    background-color: rgb(121, 120, 120);
     width:fit-content;
     height: 700px;
 }
@@ -46,7 +46,7 @@ div h2 {
 
 div P {
     color: white;
-    font-family: 'Agency FB';
+    font-family: monospace;
 }
 
 
